# mini-inference

./: .gitignore  CMakeLists.txt  README.md  claude.md
src/: main.cpp
src/layers/: attention.cpp  attention.h  embedding.cpp  embedding.h  kv_cache.cpp  kv_cache.h  linear.cpp  linear.h  linear_layer.cpp  linear_layer.h  quantized_linear.cpp  quantized_linear.h  rms_norm.cpp  rms_norm.h  rope.cpp  rope.h  softmax.cpp  softmax.h  swiglu.cpp  swiglu.h  transformer_block.cpp  transformer_block.h
src/loader/: gguf_loader.cpp  gguf_loader.h  gguf_model_loader.cpp  gguf_model_loader.h  gguf_reader.cpp  gguf_reader.h  gguf_tokenizer_loader.cpp  gguf_tokenizer_loader.h  gpt2_byte_encoding.cpp  gpt2_byte_encoding.h
src/model/: model.cpp  model.h
src/tensor/: half_float.cpp  half_float.h  matrix.cpp  matrix.h  parallel_for.cpp  parallel_for.h  quant_blocks.cpp  quant_blocks.h  quantized_tensor.cpp  quantized_tensor.h  simd_ops.cpp  simd_ops.h  tensor.cpp  tensor.h
src/tokenizer/: bpe_tokenizer.cpp  bpe_tokenizer.h  sentencepiece_tokenizer.cpp  sentencepiece_tokenizer.h
tests/: gguf_test_helpers.h  test_attention.cpp  test_bpe_tokenizer.cpp  test_embedding.cpp  test_generate.cpp  test_gguf_loader.cpp  test_gguf_model_loader.cpp  test_gguf_reader.cpp  test_gguf_tokenizer_loader.cpp  test_gpt2_byte_encoding.cpp  test_kv_cache.cpp  test_linear.cpp  test_matrix.cpp  test_model.cpp  test_parallel_for.cpp  test_quant_blocks.cpp  test_quantized_linear.cpp  test_quantized_tensor.cpp  test_rms_norm.cpp  test_rms_norm.h  test_rope.cpp  test_sentencepiece_tokenizer.cpp  test_simd_ops.cpp  test_softmax.cpp  test_swiglu.cpp  test_tensor.cpp  test_transformer_block.cpp
